--- a/研究论文/研究记录.md
+++ b/研究论文/研究记录.md
@@ -15,6 +15,7 @@
        - [x] solved?
     2. 查询如何将ubuntu18.04的软件包移植到ubuntu20.04的环境下运行
        - [ ] solved?
+    3. catkin build 失败
 
   - 解决方法：
   
