--- a/研究论文/研究记录.md
+++ b/研究论文/研究记录.md
@@ -2,93 +2,102 @@
 
 ## 2025/6 机器人环境构建
 
-- 实际难题：
+## 具体研究
+
+- 希望能提出一种更智能的购物机器人追随系统，提升远程购物者的购物体验
+
+### 实际难题
   
-  - 现有机器人构筑环境老旧，需要能够在ubuntu20.04环境下运行
-  - 没有远程开发环境，只能在主机上开发使用繁琐
+- 现有机器人构筑环境老旧，需要能够在ubuntu20.04环境下运行
+- 没有远程开发环境，只能在主机上开发使用繁琐
+- 如何使用LLM等使得机器人可以与人类进行交互让ai决定机器人与人类的距离
 
-- 研究难题与解决方法：
+### 研究难题与解决方法
   
-  - 研究难题:
+#### 研究难题
   
-    1. 查看如何在ubuntu20.04环境上安装远程开发环境
-       - [x] solved?
-    2. 查询如何将ubuntu18.04的软件包移植到ubuntu20.04的环境下运行
-       - [ ] solved?
-    3. catkin build 失败
+1. 查看如何在ubuntu20.04环境上安装远程开发环境
+    - [x] solved?
+2. 查询如何将ubuntu18.04的软件包移植到ubuntu20.04的环境下运行
+    - [ ] solved?
+3. catkin build 失败
+    - [ ] solved?
 
-  - 解决方法：
+#### 解决方法
   
-    1. 在ubuntu20.04上安装vnc实现远程开发
+1. 在 Ubuntu20.04 上安装 VNC 实现远程开发：
 
-      ```bash
-        #1.安装openssh-server
-        sudo apt install openssh-server
-        #2.查看桌面环境 使用gnome
-        echo $DESKTOP_SESSION
-        #3.change display manager
-        sudo apt install lightdm
-        #4. download x11vnc
-        sudo apt install x11vnc
-        #5. set vnc password
-        sudo x11vnc -storepasswd /etc/.vncpasswd
-    
-      ```
+      - 参考自 [vstone](https://vstoneofficial.github.io/lightrover_webdoc/setup/softwareSetupUbuntu/) 有关于 Ubuntu 设置的部分
+      - 执行以下命令：
 
-      ```bash
-        #6. set vnc service 
-        sudo nano /etc/systemd/system/x11vnc.service
-        
-        [Unit]
-        Description=x11vnc (Remote access)
-        After=network-online.target
+     ```bash
+     # 1. 安装 openssh-server
+     sudo apt install openssh-server
+     # 2. 查看桌面环境，使用 gnome
+     echo $DESKTOP_SESSION
+     # 3. 切换 display manager
+     sudo apt install lightdm
+     # 4. 安装 x11vnc
+     sudo apt install x11vnc
+     # 5. 设置 vnc 密码
+     sudo x11vnc -storepasswd /etc/.vncpasswd
 
-        [Service]
-        Type=simple
-        ExecStart=/usr/bin/x11vnc -auth guess -display :0 -rfbauth /etc/.vncpasswd -rfbport 5900 -forever -loop -noxdamage -repeat -shared
-        ExecStop=/bin/kill -TERM $MAINPID
-        ExecReload=/bin/kill -HUP $MAINPID
-        KillMode=control-group
-        Restart=on-failure
+     # 6. 创建 vnc 服务配置
+     sudo nano /etc/systemd/system/x11vnc.service
 
-        [Install]
-        WantedBy=graphical.target
-        ```
+     [Unit]
+     Description=x11vnc (Remote access)
+     After=network-online.target
 
-        ```bash
-        #7. input commands
-        sudo systemctl daemon-reload
-        sudo systemctl enable x11vnc
-        sudo systemctl start x11vnc
+     [Service]
+     Type=simple
+     ExecStart=/usr/bin/x11vnc -auth guess -display :0 -rfbauth /etc/.vncpasswd -rfbport 5900 -forever -loop -noxdamage -repeat -shared
+     ExecStop=/bin/kill -TERM $MAINPID
+     ExecReload=/bin/kill -HUP $MAINPID
+     KillMode=control-group
+     Restart=on-failure
 
-        #8 usable code
-        vncserver -kill :n
-        vncserver -list
-        hostname -I
-      ```
+     [Install]
+     WantedBy=graphical.target
 
-    - 参考自 [vstone](https://vstoneofficial.github.io/lightrover_webdoc/setup/softwareSetupUbuntu/)有关于ubuntu设置的部分
+     # 7. 启动服务
+     sudo systemctl daemon-reload
+     sudo systemctl enable x11vnc
+     sudo systemctl start x11vnc
 
-    2. 查看ubuntu18.04中所使用的组件在ubuntu20.04的环境下安装对应的组件
+     # 8. 可用指令
+     vncserver -kill :n
+     vncserver -list
+     hostname -I
+     ```
 
-       - icartmini
-       - YP-spur
-       - ARToolkit-2.72.1.tgz  ARToolKit环境设置 和修改配置并复制到user/lib
-       - Qt 安装
-       - 复制各个软件包注意路径设置
-       - urg_node (激光传感器) 包安装
-       - `sudo chmod 666 /dev/ttyUSB0`
-       - 删除旧的 ROS 密钥：`sudo apt-key del F42ED6FBAB17C654 # 替换为错误信息中提供的密钥ID`
-       - 重新添加 ROS 公钥：
+1. 查看 Ubuntu18.04 中所使用的组件，在 Ubuntu20.04 下安装对应版本：
 
-        ```bash
-            sudo rm /etc/apt/sources.list.dros-latest.list # 暂时删除旧的源文件
-            sudo apt update # 更新一下，确保没有残留问题
-            # 重新添加 GPG 密钥
-            sudo curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
+   - 组件列表：
+     - `icartmini`
+     - `YP-spur`
+     - `ARToolkit-2.72.1.tgz`（配置后复制到 `/usr/lib`）
+     - Qt 安装
+     - urg_node（激光传感器）包安装
+     - 复制软件包注意路径设置
+   - 设备权限调整：
 
-            # 重新添加 ROS 软件源，并指定密钥文件
-            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros-latest.list > /dev/null
-         ```
+     ```bash
+     sudo chmod 666 /dev/ttyUSB0
+     ```
+
+   - 解决 ROS 密钥过期问题：
+
+     ```bash
+     sudo apt-key del F42ED6FBAB17C654  # 替换为错误信息中的密钥 ID
+     sudo rm /etc/apt/sources.list.d/ros-latest.list
+     sudo apt update
+
+     sudo curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
+
+     echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros-latest.list > /dev/null
+     ```
+
+1.
 
 - 意义： 能够使机器人获得更多运行支持，便于进行下一步研究和后来者的继续研究
