--- a/研究论文/研究记录.md
+++ b/研究论文/研究记录.md
@@ -18,10 +18,11 @@
   
 1. 查看如何在ubuntu20.04环境上安装远程开发环境
     - [x] solved?
-2. 查询如何将ubuntu18.04的软件包移植到ubuntu20.04的环境下运行
+1. 查询如何将ubuntu18.04的软件包移植到ubuntu20.04的环境下运行
     - [ ] solved?
-3. catkin build 失败
+1. catkin build 失败
     - [ ] solved?
+1. 引入LLM实现与人的交互
 
 #### 解决方法
   
@@ -98,6 +99,6 @@
      echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros-latest.list > /dev/null
      ```
 
-1.
+1. 原来版本使用的opencv版本过于老旧需要将原来的代码进行重构
 
 - 意义： 能够使机器人获得更多运行支持，便于进行下一步研究和后来者的继续研究
