添加具体问题

--- a/研究论文/研究记录.md
+++ b/研究论文/研究记录.md
@@ -23,6 +23,9 @@
 1. catkin build 失败
     - [ ] solved?
 1. 引入LLM实现与人的交互
+    - [ ] sooved?
+1. 具体化人类的指令
+    - 让机器人靠近时靠近多少算近(单位m还是cm)
 
 #### 解决方法
   
