update research record

--- a/研究论文/研究记录.md
+++ b/研究论文/研究记录.md
@@ -22,6 +22,8 @@
     - [ ] solved?
 1. catkin build 失败
     - [ ] solved?
+1. 在ros上部署chatgpt
+    - [ ] solved?
 1. 引入LLM实现与人的交互
     - [ ] sooved?
 1. 具体化人类的指令
@@ -101,6 +103,13 @@
 
      echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros-latest.list > /dev/null
      ```
+
+1. 通过新建ros node 来实现openai api调用
+   1. 安装catkin tools ` sudo apt install python3-osrf-pycommon python3-catkin-tools`
+
+   1. 安装open ai python lib 和相关依赖并构筑`git clone https://github.com/davesarmoury/openai_ros.git`
+  `rosdep install -y -r --from-paths src --ignore-src`
+   1. <https://opensource-robotics.tokyo.jp/?p=7477>
 
 1. 原来版本使用的opencv版本过于老旧需要将原来的代码进行重构
 
